--- a/src/main/resources/templates/get.html
+++ b/src/main/resources/templates/get.html
@@ -6,6 +6,7 @@
       layout:decorate="~{layout/default_layout}">
 <head>
     <title>SB Admin 2 - Bootstrap Admin Theme</title>
+    <meta name="_csrf" th:content="${_csrf.token}"><meta name="_csrf_header" th:content="${_csrf.headerName}">
 
 </head>
 
@@ -380,9 +381,7 @@
                                     <label>Writer</label> <input class="form-control" name='writer' th:value="${board.writer}" readonly="readonly">
                                 </div>
 
-                                <sec:authorize access="isAuthenticated()">
-                                    <button th:if="${#authentication.principal.username eq board.writer}" data-oper="modify" class="btn btn-default" th:onclick="'location.href=\'/board/modify?bno='+${board.bno}+'\''">Modify</button>
-                                </sec:authorize>
+                                <button sec:authorize="isAuthenticated()" th:if="${#authentication.principal.username eq board.writer}" data-oper="modify" class="btn btn-default" th:onclick="'location.href=\'/board/modify?bno='+${board.bno}+'\''">Modify</button>
 
                                 <button data-oper="list" class="btn btn-info" onclick="location.href='/board/list'">List</button>
 
@@ -409,9 +408,7 @@
                     <div class="panel panel-default">
                         <div class="panel-heading">
                             <i class="fa fa-comments fa-fw"></i> Reply
-                            <sec:authorize access="isAuthenticated()">
-                            <button id="addReplyBtn" class="btn btn-primary btn-xs pull-right">New Reply</button>
-                            </sec:authorize>
+                            <button sec:authorize="isAuthenticated()" id="addReplyBtn" class="btn btn-primary btn-xs pull-right">New Reply</button>
                         </div>
 
                         <!-- /.panel-heading -->
@@ -475,7 +472,6 @@
         <!-- /.modal-dialog -->
     </div>
     <!-- /.modal -->
-
 
     <script type="text/javascript" src="/js/reply.js"></script>
 
@@ -546,15 +542,34 @@
             var modalRemoveBtn = $("#modalRemoveBtn");
             var modalRegisterBtn = $("#modalRegisterBtn");
 
+
+            var replyer=null;
+
+            if(/*[[${#authorization.expr("isAuthenticated()")}]]*/) {
+                replyer =/*[[${#authentication.name}]]*/;
+
+            }
+
+
+
+            var csrfHeaderName = $("meta[name='_csrf_header']").attr("content");
+            var csrfTokenName = $("meta[name='_csrf']").attr("content");
+
+
             $("#addReplyBtn").on("click", function (e){
 
                 modal.find("input").val("");
+                modal.find("input[name='replyer']").val(replyer).attr("readonly","readonly");
                 modalInputReplyDate.closest("div").hide();
                 modal.find("button[id != 'modalCloseBtn']").hide();
 
                 modalRegisterBtn.show();
 
                 $(".modal").modal("show");
+            });
+
+            $(document).ajaxSend(function (e, xhr, options) {
+                xhr.setRequestHeader(csrfHeaderName, csrfTokenName);
             });
 
             modalRegisterBtn.on("click", function (e){
