--- a/src/main/resources/templates/modify.html
+++ b/src/main/resources/templates/modify.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="ko"
       xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="http://www.thymeleaf.org/extras/spring-security"
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
       layout:decorate="~{layout/default_layout}">
 <head>
@@ -391,10 +392,8 @@
                                 <div class="form-group">
                                     <label>UpdateDate</label> <input class="form-control" name='modifiedData' th:value="${board.modifiedDate}" readonly="readonly">
                                 </div>
-                                <sec:authorize access="isAuthenticated()">
-                            <button th:if="${#authentication.principal.username eq board.writer}" data-oper="modify" class="btn btn-default" th:onclick="'location.href=\'/board/modify?bno='+${board.bno}+'\''">Modify</button>
-                            <button th:if="${#authentication.principal.username eq board.writer}" data-oper="remove" class="btn btn-danger">Remove</button>
-                                </sec:authorize>
+                                <button sec:authorize access="isAuthenticated()" th:if="${#authentication.principal.username eq board.writer}" data-oper="modify" class="btn btn-default" th:onclick="'location.href=\'/board/modify?bno='+${board.bno}+'\''">Modify</button>
+                                <button sec:authorize access="isAuthenticated()" th:if="${#authentication.principal.username eq board.writer}" data-oper="remove" class="btn btn-danger">Remove</button>
                                 <button data-oper="list" class="btn btn-info" onclick="location.href='/board/list'">List</button>
                             </form>
                         </div>
